Fix modal scrollbar on retina screens
Fixes #79

--- a/styles/modal.less
+++ b/styles/modal.less
@@ -90,6 +90,7 @@ atom-panel.modal {
     bottom: 0;
     z-index: -1;
     background: @overlay-backdrop-color;
+    backface-visibility: hidden; // fixes scrollbar on retina screens
     -webkit-animation: overlay-fade .1s cubic-bezier(0.215, 0.61, 0.355, 1);
   }
 
